--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
-  </body>
+<body>
+<header class="main-header">
+<a class="logo-link" href="index.html">
+<img class="logo" width="140" height="70" src="img/logo.svg"/ alt="Sedona">
+</a>
+<nav class="site-navigation">
+<ul class="main-menu">
+ <li class="menu-item"><a href="#">Информация</a></li>
+ <li class="menu-item"><a href="#">Фото и ведео</a></li>
+ <li class="menu-item"><a href="#">Карта штата</a></li>
+ <li class="menu-item"><a href="#">Гостиницы</a></li>
+</ul>
+</nav>
+</header>
+<main class="container">
+<section "main-banner">
+<img class="index-banner" src="/pic/banner.jpg" alt="Sedona's nature">
+</section>
+<section class="main-info">
+<div class="info-text">
+<h1 class="info-title">Седона — небольшой городок в Аризоне,
+заслуживающий большего!</h1>
+<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+</div>
+</section>
+<!--<section class="features"><ul class="reasons-list">
+<li class="reason"><li>
+</ul></section>-->
+<section class="interest-form">
+<div class="form-text">
+<h2 class="form-text-title">Заинтересовались?</h2>
+<p>Укажите предполагаемые даты поездки, 
+и мы покажем вам лучшие предложения гостиниц в седоне
+</p>
+</div>
+</section>
+<!--Form and map-->
+</main>
+<footer class="main-footer">
+<div class="hashtag">#visitsedona</div>
+<div class="social">
+<ul class="social-icons">
+<li><a class="social-button" href="#">Twitter</a></li>
+<li><a class="social-button" href="#">Facebook</a></li>
+<li><a class="social-button" href="#">Youtube</a></li>
+</ul>
+</div>
+<div class="developer">
+Website by <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss" target="blanc"><img width="115" height="40" src="/pic/htmlacademy.svg" alt="HTML Academy"></a>
+</div>
+</footer>
+</body>
 </html>
