исправила опечатку в футере

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</ul>
 		</div>
 		<div class="developer">
-		Website by <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss" target="blanc"><img width="115" height="40" src="/pic/htmlacademy.svg" alt="HTML Academy"></a>
+		Website by <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank"><img width="115" height="40" src="/pic/htmlacademy.svg" alt="HTML Academy"></a>
 		</div>
 	</footer>
 </body>
