--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
 <body>
 	<header class="main-header">
-		<img class="logo" width="140" height="70" src="img/logo.svg"/ alt="Sedona">
+		<a class="logo-link">
+			<img class="logo" width="140" height="70" src="img/logo.svg"/ alt="Sedona">
+		</a>
 	<nav class="site-navigation">
 		<ul class="main-menu">
 			<li class="menu-item"><a href="#">Информация</a></li>
