добавила в img файлы, в верстку добавила контентные изображение, перенесла на главной баннер в фон.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 <main class="container">
 	<section "main-banner">
-		<img class="index-banner" src="/pic/banner.jpg" alt="Sedona's nature">
+		<img class="index-banner" src="img/welcome.png" alt="Welcome to Sedona">
 	</section>
 	<section class="main-info">
 		<div class="info-text">
@@ -50,7 +50,7 @@
 			</ul>
 		</div>
 		<div class="developer">
-		Website by <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank"><img width="115" height="40" src="/pic/htmlacademy.svg" alt="HTML Academy"></a>
+		Website by <a class="academy-logo" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank"><img width="115" height="40" src="img/logo-htmlacademy.svg" alt="HTML Academy"></a>
 		</div>
 	</footer>
 </body>
