исправлена ошибка синтаксиса в main-banner

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</nav>
 </header>
 <main class="container">
-	<section "main-banner">
+	<section class="main-banner">
 		<img class="index-banner" src="img/welcome.png" alt="Welcome to Sedona">
 	</section>
 	<section class="main-info">
