пункт меню гостиницы - добавлена ссылка

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<li class="menu-item"><a href="#">Информация</a></li>
 			<li class="menu-item"><a href="#">Фото и ведео</a></li>
 			<li class="menu-item"><a href="#">Карта штата</a></li>
-			<li class="menu-item"><a href="#">Гостиницы</a></li>
+			<li class="menu-item"><a href="inner.html">Гостиницы</a></li>
 		</ul>
 	</nav>
 </header>
