--- a/inner.html
+++ b/inner.html
@@ -19,8 +19,56 @@
 	</nav>
 	</header>
 <main class="container">
-	<!--Фильтр <section class="filter">
-	</section>-->
+<section class="filter">
+	<h2 class="visually-hidden">Фильтр товаров</h2>
+		<form class="filter" method="get" action="https://echo.htmlacademy.ru">
+			<section class="infrostructure">
+				<fieldset>
+					<legend>Инфраструктура:</legend>
+						<ul>
+							<li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
+                <label for="filter-pool">Бассейн</label>
+							</li>
+							<li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
+                <label for="filter-parking">Парковка</label>
+							</li>
+							<li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
+                <label for="filter-wifi">Wi-Fi</label>
+							</li>
+						</ul>
+				</fieldset>
+			</section>
+			<section class="type">
+				<fieldset>
+					<legend>Тип жилья:</legend>
+						<ul>
+							<li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
+                <label for="filter-hotel">Гостиница</label>
+							</li>
+							<li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
+                <label for="filter-motel">Мотель</label>
+							</li>
+							<li class="filter-option">
+                <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+                <label for="filter-apartments">Апартаменты</label>
+							</li>
+						</ul>
+				</fieldset>
+			</section>
+			<section class="price">
+				<label for="filter-price-per-day">Стоимость в сутки (Р):</label>
+				<div class="min-fprice-per-day"></div>
+				<div class="min-fprice-per-day"></div>
+				<input class="filter-price-per-day" type="range" name="price-per-day" id="filter-price-per-day" min="0" max="3000" step="1" value="2500"> 
+			</section>
+			<button type="submit" class="filter-button button">Показать</button>
+		</form>
+</section>
 	<section class="hotels">
 		<ul class="hotels-list">
 			<li class="hotel-item">
