добавила файл стилей

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   </head>
 <body>
 	<header class="main-header">
@@ -21,6 +24,7 @@
 <main class="container">
 	<section class="main-banner">
 		<img class="index-banner" src="img/welcome.png" alt="Welcome to Sedona">
+		
 	</section>
 	<section class="main-info">
 		<div class="info-text">
@@ -32,12 +36,6 @@
 		<ul class="reasons-list">
 			<li class="reason"><li>
 		</ul></section>-->
-	<section class="interest-form">
-		<div class="form-text">
-			<h2 class="form-text-title">Заинтересовались?</h2>
-			<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-		</div>
-	</section>
 	<section class="interest-form">
 		<div class="form-text">
 			<h2 class="form-text-title">Заинтересовались?</h2>
@@ -75,10 +73,10 @@
 	<footer class="main-footer">
 		<div class="hashtag">#visitsedona</div>
 		<div class="social">
-			<ul class="social-icons">
-				<li><a class="social-button" href="#">Twitter</a></li>
-				<li><a class="social-button" href="#">Facebook</a></li>
-				<li><a class="social-button" href="#">Youtube</a></li>
+			<ul>
+				<li class="social-icons"><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
+				<li class="social-icons"><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
+				<li class="social-icons"><a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a></li>
 			</ul>
 		</div>
 		<div class="developer">
