--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</section>
 	<section class="main-info">
 		<div class="info-text">
-			<h2 class="info-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+			<h2 class="info-title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h2>
 			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 		</div>
 	</section>
@@ -39,23 +39,23 @@
 	<section class="interest-form">
 		<div class="form-text">
 			<h2 class="form-text-title">Заинтересовались?</h2>
-			<p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+			<p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
 		</div>
 	</section>
-<section class="register-form">
+<section class="registration">
 	<form class="register-form" action="https://echo.htmlacademy.ru" method="post">
 		<h2 class="form-title">Поиск гостиниц в Седоне</h2>
-		<p class="register-form">
-			<label for="arival">Дата заезда:</label><br>
-			<input type="text" name="arival" id="arival" value="24 апреля 2017">
+		<p class="register-form-field">
+			<label for="arival">Дата заезда:</label>
+			<input class="date" type="text" name="arival" id="arival" value="24 апреля 2017">
 			<button type="button" class="calendar"></button>
 		</p>
-		<p class="register-form">
-			<label for="depature">Дата выезда:</label><br>
-			<input type="text" name="depature" id="depature" value="4 июля 2017">
+		<p class="register-form-field">
+			<label for="depature">Дата выезда:</label>
+			<input class="date" type="text" name="depature" id="depature" value="4 июля 2017">
 			<button type="button" class="calendar"></button>
 			</p>
-		<p class="register-form">			
+		<p class="register-form-field">			
 			<label for="adults">Взрослые:</label>
             <button type="button" class="plus"></button>
             <input class="people-number" id="adults" type="text" pattern="[1-9]*" value="2">
