корерктировалал стили и шаблоны

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
   </head>
 <body>
 	<header class="main-header">
@@ -24,7 +24,6 @@
 <main class="container">
 	<section class="main-banner">
 		<img class="index-banner" src="img/welcome.png" alt="Welcome to Sedona">
-		
 	</section>
 	<section class="main-info">
 		<div class="info-text">
@@ -65,7 +64,7 @@
             <input class="people-number" id="children" type="text" pattern="[0-9]*" value="0">
             <button type="button" class="minus"></button>
         </p> 
-		<button type="submit" class="index-button button">Найти</button>			
+		<button type="submit" class="index-button">Найти</button>			
 	</form>
 </section>
 <!--MAP-->
