--- a/inner.html
+++ b/inner.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: гостиницы Седоны</title>
+		<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+		<link href="css/normalize.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
   </head>
 <body>
 	<header class="main-header">
@@ -72,10 +75,10 @@
 	<section class="hotels">
 		<ul class="hotels-list">
 			<li class="hotel-item">
-				<h2><a class="hotel-name" href="#">Amara Resort & Spa</a></h2>
 				<div class="hotel-img">
 					<img src="img/1_preview.jpg" width="135" height="90" alt="Amara Resort Spa"/>
 				</div>
+				<h2><a class="hotel-name" href="#">Amara Resort & Spa</a></h2>
 				<div class="hotel-info">
 				<span class="hotel-type">Гостиница</span><span class="hotel-price">От 4000 Р.</span>
 				</div>
@@ -89,10 +92,10 @@
 				</div>
 			</li>
 			<li class="hotel-item">
-				<h2><a class="hotel-name" href="#">Desert quail inn</a></h2>
 				<div class="hotel-img">
 					<img src="img/2_preview.jpg" width="135" height="90" alt="Desert quail inn"/>
 				</div>
+				<h2><a class="hotel-name" href="#">Desert quail inn</a></h2>
 				<div class="hotel-info">
 				<span class="hotel-type">Мотель</span>
 				<span class="hotel-price">От 2000 Р.</span>
@@ -107,9 +110,9 @@
 				</div>
 			</li>
 			<li class="hotel-item">
-				<h2><a class="hotel-name" href="#">Villas at Poco Diablo</a></h2>
 				<div class="hotel-img">
 					<img src="img/3_preview.jpg" width="135" height="90" alt="Villas at Poco Diablo"/></div>
+				<h2><a class="hotel-name" href="#">Villas at Poco Diablo</a></h2>
 				<div class="hotel-type">Апартаменты</div>
 				<div class="hotel-price">От 4000 Р.</div>
 				<div class="hotel-buttons">
@@ -124,13 +127,13 @@
 		</ul>
 	</section>
 </main>
-	<footer class="main-footer">
+<footer class="main-footer">
 		<div class="hashtag">#visitsedona</div>
 		<div class="social">
-			<ul class="social-icons">
-				<li><a class="social-button" href="#">Twitter</a></li>
-				<li><a class="social-button" href="#">Facebook</a></li>
-				<li><a class="social-button" href="#">Youtube</a></li>
+			<ul>
+				<li class="social-icons"><a class="social-button" href="#"><span class="visually-hidden">Twitter</span></a></li>
+				<li class="social-icons"><a class="social-button" href="#"><span class="visually-hidden">Facebook</span></a></li>
+				<li class="social-icons"><a class="social-button" href="#"><span class="visually-hidden">Youtube</span></a></li>
 			</ul>
 		</div>
 		<div class="developer">
