выравнивание по пикселям

--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
 			<button type="button" class="calendar"></button>
 			</p>
 		<p class="register-form-field">
-		<span class="guests">
-			<label for="adults">Взрослые:</label>
-            <button type="button" class="minus">-</button>
-            <input class="people-number" id="adults" type="text" pattern="[1-9]*" placeholder="2">
-            <button type="button" class="plus">+</button></span>
-		<span class="guests"><label for="children">Дети:</label>
-            <button type="button" class="minus">-</button>
-            <input class="people-number" id="children" type="text" pattern="[0-9]*" placeholder="0">
-            <button type="button" class="plus">+</button></span>
+				<label class="adults" for="adults">Взрослые:</label>
+				<button type="button" class="minus">-</button>
+				<input class="people-number" id="adults" type="text" pattern="[1-9]*" placeholder="2">
+				<button type="button" class="plus">+</button>
+
+				<label class="kids" for="children">Дети:</label>
+				<button type="button" class="minus">-</button>
+				<input class="people-number" id="children" type="text" pattern="[0-9]*" placeholder="0">
+				<button type="button" class="plus">+</button>
         </p> 
 		<button type="submit" class="index-button button">Найти</button>			
 	</form>
