новые блоки, фильтр, + Корректировки

--- a/index.html
+++ b/index.html
@@ -41,10 +41,58 @@
 			<p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 		</div>
 	</section>
-	<!--<section class="features">
+	<section class="features">
 		<ul class="reasons-list">
-			<li class="reason"><li>
-		</ul></section>-->
+			<li class="reason-smart">
+				<div class="text-reason-smart"> 
+					<h2>Настоящий городок</h2>
+					<span class="number">— №1 — </span>
+					<p >Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+				</div>
+				<div class="reason-smart-pic"> 
+					<img src="img/photo-city.jpg">
+				</div>
+				<ul class="extra-reasons">
+					<li class="extra-reason-item house">
+						<h2>Жильё</h2>
+						<p class="reason-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+					</li>
+					<li class="extra-reason-item food">
+						<h2>Еда</h2>
+						<p class="reason-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+					</li>
+					<li class="extra-reason-item gift">
+						<h2>Сувениры</h2>
+						<p class="reason-text">Не только китайского, но и местного производства!</p>
+					</li>
+				</ul></li>
+			<li class="reason-smart">
+			<div class="reason-smart-pic"> 
+					<img class="smart-reason-pic" src="img/photo-bridge.jpg">
+				</div>
+			<div class="text-reason-smart"> 
+				<h2>Там есть Мост дьявола</h2>
+				<span class="number">— №2 — </span>
+				<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+				</div>
+				</li>
+			<li class="reason">
+				<h2>Небольшая площадь</h2>
+				<span class="number">— №3 — </span>
+				<p class="reason-text">Все достопримечательности находятся очень близко</p>
+			</li>
+			<li class="reason">
+				<h2>Красивая дорога</h2>
+				<span class="number">— №4 — </span>
+				<p class="reason-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+			</li>
+			<li class="reason">
+				<h2>Мало туристов</h2>
+				<span class="number">— №5 — </span>
+				<p class="reason-text">Большинство едет в гранд каньон и толпится там</p>
+			</li>
+		</ul>
+	</section>
 	<section class="interest-form">
 		<div class="form-text">
 			<h2 class="form-text-title">Заинтересовались?</h2>
@@ -77,7 +125,9 @@
         </p> 
 		<button type="submit" class="index-button button">Найти</button>			
 	</form>
-<!--MAP-->
+<section class="map">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d564474.505247366!2d-112.00279115033129!3d34.87271362170046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1462035967330" allowfullscreen=""></iframe>
+	</section>
 </main>
 	<footer class="main-footer">
 		<div class="hashtag">#visitsedona</div>
