--- a/inner.html
+++ b/inner.html
@@ -33,7 +33,7 @@
 	</nav>
 	</header>
 	<main class="container">
-		<section class="filter">
+		<section class="filter-part">
 			<h2 class="visually-hidden">Фильтр товаров</h2>
 			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
 				<section class="infrostructure">
@@ -41,15 +41,15 @@
 						<legend>Инфраструктура:</legend>
 							<ul>
 								<li class="filter-option">
-									<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
+									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
 									<label for="filter-pool">Бассейн</label>
 								</li>
 								<li class="filter-option">
-									<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
+									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
 									<label for="filter-parking">Парковка</label>
 								</li>
 								<li class="filter-option">
-									<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
+									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
 									<label for="filter-wifi">Wi-Fi</label>
 								</li>
 							</ul>
@@ -60,28 +60,53 @@
 						<legend>Тип жилья:</legend>
 							<ul>
 								<li class="filter-option">
-									<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
+									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
 									<label for="filter-hotel">Гостиница</label>
 								</li>
 								<li class="filter-option">
-									<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
+									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
 									<label for="filter-motel">Мотель</label>
 								</li>
 								<li class="filter-option">
-									<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
+									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
 									<label for="filter-apartments">Апартаменты</label>
 								</li>
 							</ul>
 					</fieldset>
 				</section>
 				<section class="price">
-					<label for="filter-price-per-day">Стоимость в сутки (Р):</label>
-					<div class="min-fprice-per-day"></div>
-					<div class="min-fprice-per-day"></div>
-					<input class="filter-price-per-day" type="range" name="price-per-day" id="filter-price-per-day" min="0" max="3000" step="1" value="2500"> 
+				<div class="range">
+					<div class="filter-price-per-day">Стоимость в сутки (Р):</div>
+					<div class="price-per-day">
+						<label class="min-price">от <input type="text" name="min-price" value="0"></label>
+						<label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+					</div>
+					<div class="range-controls">
+						<div class="scale">
+							<div class="bar"></div>
+							<div class="range-toggle range-toggle-min"></div>
+							<div class="range-toggle range-toggle-max"></div>
+						</div>
+					</div>
+					</div>
+					<button type="submit" class="filter-button">Показать</button>
 				</section>
-				<button type="submit" class="filter-button button">Показать</button>
 			</form>
+		</section>
+		<section class="filter-results">
+			<div class="found">Найдено: 3</div>
+			<div class="sort-by">
+			<h3>Сортировка:</h3>
+				<ul>
+					<li class="sort-by-item"><a class="current">По цене</a></li>
+					<li class="sort-by-item"><a class="sort">По типу</a></li>
+					<li class="sort-by-item"><a class="sort">По рейтингу</a></li>
+				</ul>
+			</div>
+			<div class="sorting-buttons">
+				<button type="button" aria-label="Больше" class="up-down"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg></button>
+				<button type="button" aria-label="Меньше" class="up-down"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 10L0 0h11"/></svg></button>
+			</div>
 		</section>
 		<section class="hotels">
 			<ul class="hotels-list">
