--- a/inner.html
+++ b/inner.html
@@ -50,15 +50,15 @@
 							<ul>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="pool" id="filter-pool" checked>
-									<label for="filter-pool">Бассейн</label>
+									<label class="filter-label" for="filter-pool" tabindex="0">Бассейн</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="parking" id="filter-parking">
-									<label for="filter-parking">Парковка</label>
+									<label class="filter-label" for="filter-parking" tabindex="0">Парковка</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="wifi" id="filter-wifi">
-									<label for="filter-wifi">Wi-Fi</label>
+									<label class="filter-label" for="filter-wifi" tabindex="0">Wi-Fi</label>
 								</li>
 							</ul>
 						</fieldset>
@@ -69,15 +69,15 @@
 							<ul>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="hotel" id="filter-hotel" checked>
-									<label for="filter-hotel">Гостиница</label>
+									<label class="filter-label" for="filter-hotel" tabindex="0">Гостиница</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="motel" id="filter-motel" checked>
-									<label for="filter-motel">Мотель</label>
+									<label class="filter-label" for="filter-motel" tabindex="0">Мотель</label>
 								</li>
 								<li class="filter-option">
 									<input class="visually-hidden filter-input-checkbox" type="checkbox" name="apartments" id="filter-apartments" checked>
-									<label for="filter-apartments">Апартаменты</label>
+									<label class="filter-label" for="filter-apartments" tabindex="0">Апартаменты</label>
 								</li>
 							</ul>
 						</fieldset>
