макет до перфекта

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="reasons-list">
 					<div class="reason-smart">
 						<div class="text-reason-smart"> 
-							<h2 class="reason-heading">Настоящий городок</h2>
+							<h2>Настоящий городок</h2>
 							<span class="number">— №1 —</span>
 							<p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
 						</div>
@@ -61,15 +61,15 @@
 						</div>
 						<ul class="extra-reasons">
 							<li class="extra-reason-item house">
-								<h2 class="reason-heading">Жильё</h2>
+								<h2>Жильё</h2>
 								<p class="reason-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
 							</li>
 							<li class="extra-reason-item food">
-								<h2 class="reason-heading">Еда</h2>
+								<h2>Еда</h2>
 								<p class="reason-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
 							</li>
 							<li class="extra-reason-item gift">
-								<h2 class="reason-heading">Сувениры</h2>
+								<h2>Сувениры</h2>
 								<p class="reason-text">Не только китайского, но и местного производства!</p>
 							</li>
 						</ul>
@@ -79,7 +79,7 @@
 							<img src="img/photo-bridge.jpg" alt="Devil's Bridge">
 						</div>
 						<div class="text-reason-smart"> 
-							<h2 class="reason-heading">Там есть<br>Мост дьявола</h2>
+							<h2>Там есть<br>Мост дьявола</h2>
 							<span class="number">— №2 —</span>
 							<p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
 						</div>
@@ -104,7 +104,7 @@
 			<section class="wrapper">
 				<div class="form-search">
 					<h2 class="form-text-title">Заинтересовались?</h2>
-					<p>Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
+					<p class="form-text">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в седоне</p>
 					<button type="button" class="form-title">Поиск гостиницы в Седоне</button>
 					<form class="register-form" action="https://echo.htmlacademy.ru" method="post">
 						<p class="register-form-field">
@@ -172,6 +172,6 @@
 			</div>
 		</footer>
 	</div>
-<script type="text/javascript" src="js/script.js"></script>
+<!--script type="text/javascript" src="js/script.js"></script-->
 </body>
 </html>
